som_youtube_beta
This is beta Version_Responsive Web

--- a/index.html
+++ b/index.html
@@ -30,13 +30,165 @@
                 <div class="header__input--voice"><i class="fa-solid fa-microphone fa-lg"></i></div>
             </div>
             <div class="header__end">
-                <button class="header__search"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
+                <button class="header__search"><i clEass="fa-sharp fa-solid fa-magnifying-glass"></i></button>
                 <button class="header__camera"><i class="fa-solid fa-video"></i></button>
                 <button class="header__bell"><i class="fa-regular fa-bell"></i></button>
                 <div class="header__profile"><img src="imgs/thumnail.jpg"></div>
             </div>
         </div>
     </header>
+    <nav class="nav">
+        <ul class="nav__wrapper">
+            <li>    
+                <button class="nav__icon"><i class="fa-solid fa-heart"></i></button>
+                <button class="nav__menu">메뉴항목</button>
+            </li>
+            <li>    
+                <button class="nav__icon"><i class="fa-solid fa-heart"></i></button>
+                <button class="nav__menu">메뉴항목</button>
+            </li>
+            <li>    
+                <button class="nav__icon"><i class="fa-solid fa-heart"></i></button>
+                <button class="nav__menu">메뉴항목</button>
+            </li>
+        </ul>
+    </nav>
+    <section class="thumbs">
+        <div class="thumbs__wrapper">
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+            <div class="thumbs__item">
+                <img class="thumbs__thumbnail" src="imgs/fruit.jpg">
+                <div class="thumbs__info">
+                    <div class="thumbs__profile"></div>
+                    <div class="thumbs__text">
+                        <h3 class="thumbs__text--title">영상제목</h3>
+                        <p class="thumbs__text--owner">게시자</p>
+                        <p class="thumbs__text--anal">조회수 100회 &#183; 1시간전</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://kit.fontawesome.com/d3a66e855b.js" crossorigin="anonymous"></script>
 </body>
 </html>
